feat(tenant): add tenant get, tenant update image settings
