# internal/schemas/product.go
@@ -1,6 +1,11 @@
 package schemas
 
-import "mime/multipart"
+import (
+	"fmt"
+	"mime/multipart"
+
+	"github.com/go-playground/validator/v10"
+)
 
 type CategoryResponse struct {
 	ID   int64  `json:"id"`
@@ -8,24 +13,25 @@ type CategoryResponse struct {
 }
 
 type ProductResponse struct {
-	ID          int64            `json:"id"`
-	Code        string           `json:"code"`
-	Name        string           `json:"name"`
-	Description *string          `json:"description"`
-	Category    CategoryResponse `json:"category"`
-	Price       float64          `json:"price"`
-	Stock       float64          `json:"stock"`
-	UrlImage    []string         `json:"url_image"`
+	ID             int64            `json:"id"`
+	Code           string           `json:"code"`
+	Name           string           `json:"name"`
+	Description    *string          `json:"description"`
+	Category       CategoryResponse `json:"category"`
+	Price          float64          `json:"price"`
+	Stock          float64          `json:"stock"`
+	PrimaryImage   *string          `json:"primary_image"`
+	SecondaryImage []string         `json:"secondary_images"`
 }
 
 type ProductResponseDTO struct {
-	ID       int64            `json:"id"`
-	Code     string           `json:"code"`
-	Name     string           `json:"name"`
-	Category CategoryResponse `json:"category"`
-	Price    float64          `json:"price"`
-	Stock    float64          `json:"stock"`
-	UrlImage *string          `json:"url_image"`
+	ID           int64            `json:"id"`
+	Code         string           `json:"code"`
+	Name         string           `json:"name"`
+	Category     CategoryResponse `json:"category"`
+	Price        float64          `json:"price"`
+	Stock        float64          `json:"stock"`
+	PrimaryImage *string          `json:"primary_image"`
 }
 
 type SortBy int32
@@ -53,17 +59,45 @@ var SortBy_value = map[string]int32{
 }
 
 type ProductRequest struct {
-    // Agregamos 'query' y validaciones básicas
-    Page       int32   `json:"page" query:"page" validate:"min=1"`
-    PageSize   int32   `json:"page_size" query:"page_size" validate:"min=1,max=100"`
-    Limit			int32   `json:"limit" query:"limit" validate:"min=1,max=100"`
-    // Punteros para manejar nulls
-    CategoryID *int32  `json:"category_id" query:"category_id"`
-    Search     *string `json:"search" query:"search"`
-    Sort       *SortBy `json:"sort" query:"sort"`
+	// Agregamos 'query' y validaciones básicas
+	Page     int32 `json:"page" query:"page" validate:"min=1"`
+	PageSize int32 `json:"page_size" query:"page_size" validate:"min=1,max=100"`
+	Limit    int32 `json:"limit" query:"limit" validate:"min=1,max=100"`
+	// Punteros para manejar nulls
+	CategoryID *int32  `json:"category_id" query:"category_id"`
+	Search     *string `json:"search" query:"search"`
+	Sort       *SortBy `json:"sort" query:"sort"`
+}
+
+type ProductValidateImage struct {
+	ProductID      int64                  `json:"product_id" validate:"required" example:"1"`
+	PrimaryImage   string                 `json:"primary_image" validate:"required,oneof=set keep" example:"set | keep"`
+	SecondaryImage ValidateSecondaryImage `json:"secondary_image" validate:"required"`
+}
+
+type ValidateSecondaryImage struct {
+	Add         *int32    `json:"add" example:"1"`
+	KeepUUIDs   []string `json:"keep_uuid" example:"lista de uuids que se desea retener"`
+	RemoveUUIDs []string `json:"remove_uuid" example:"lista de uuids que se desea remover"`
+}
+
+func (p *ProductValidateImage) Validate() error {
+	validate := validator.New()
+	err := validate.Struct(p)
+	if err == nil {
+		return nil
+	}
+
+	validatorErr := err.(validator.ValidationErrors)[0]
+	field := validatorErr.Field()
+	tag := validatorErr.Tag()
+	params := validatorErr.Param()
+
+	errorMessage := field + " " + tag + " " + params
+	return ErrorResponse(422, fmt.Sprintf("error al validar campo(s): %s", errorMessage), err)
 }
 
 type ProductUploadSchema struct {
-	PrimaryImage *multipart.FileHeader `form:"primaryImage"`
+	PrimaryImage    *multipart.FileHeader   `form:"primaryImage"`
 	SecondaryImages []*multipart.FileHeader `form:"secondaryImage"`
 }
